crates/crucible-cli/src/tui/oil/components/snapshots/crucible_cli__tui__oil__components__diff_preview__tests__binary_extension_not_highlighted.snap
---
source: crates/crucible-cli/src/tui/oil/components/diff_preview.rs
expression: output
---
[38;2;158;206;106m[new file] [0m[38;5;14mtest.png[0m
[38;2;158;206;106m+binary content                                                                 [0m
