crates/crucible-cli/src/tui/oil/components/snapshots/crucible_cli__tui__oil__components__diff_preview__tests__collapsed_shows_only_header.snap
---
source: crates/crucible-cli/src/tui/oil/components/diff_preview.rs
expression: output
---
[38;2;0;206;209m[write] [0m[38;5;14mtest.rs[0m
