crates/crucible-cli/src/tui/oil/components/snapshots/crucible_cli__tui__oil__components__diff_preview__tests__delete_file_shows_all_red.snap
---
source: crates/crucible-cli/src/tui/oil/components/diff_preview.rs
expression: output
---
[38;2;247;118;142m[deleting file] [0m[38;5;14mtest.rs[0m
[38;2;247;118;142m-[0m[38;2;192;197;206mline1[0m
[38;2;247;118;142m-[0m[38;2;192;197;206mline2[0m
