crates/crucible-cli/src/tui/oil/components/snapshots/crucible_cli__tui__oil__components__diff_preview__tests__snapshot_diff_preview_deletion.snap
---
source: crates/crucible-cli/src/tui/oil/components/diff_preview.rs
expression: output
---
[38;2;247;118;142m[deleting file] [0m[38;5;14msrc/old.rs[0m
[38;2;247;118;142m-[0m[38;2;180;142;173mfn[0m[38;2;192;197;206m [0m[38;2;143;161;179mdeprecated[0m[38;2;192;197;206m() {[0m
[38;2;247;118;142m-[0m[38;2;192;197;206m    [0m[38;2;101;115;126m// This function is no longer used[0m
[38;2;247;118;142m-[0m[38;2;192;197;206m}[0m
