crates/crucible-cli/src/tui/oil/components/snapshots/crucible_cli__tui__oil__components__diff_preview__tests__snapshot_diff_preview_modification.snap
---
source: crates/crucible-cli/src/tui/oil/components/diff_preview.rs
expression: output
---
[38;2;0;206;209m[write] [0m[38;5;14msrc/lib.rs[0m
[38;5;7m fn greet() {                                                                   [0m
[38;2;247;118;142m-    println!("Hi");                                                            [0m
[38;2;158;206;106m+    println!("Hello, world!");                                                 [0m
