crates/crucible-cli/src/tui/oil/components/snapshots/crucible_cli__tui__oil__components__diff_preview__tests__snapshot_diff_preview_new_rust_file.snap
---
source: crates/crucible-cli/src/tui/oil/components/diff_preview.rs
expression: output
---
[38;2;158;206;106m[new file] [0m[38;5;14msrc/main.rs[0m
[38;2;158;206;106m+[0m[38;2;180;142;173mfn[0m[38;2;192;197;206m [0m[38;2;143;161;179mmain[0m[38;2;192;197;206m() {[0m
[38;2;158;206;106m+[0m[38;2;192;197;206m    println!("[0m[38;2;163;190;140mHello, world![0m[38;2;192;197;206m");[0m
[38;2;158;206;106m+[0m[38;2;192;197;206m}[0m
