crates/crucible-cli/src/tui/oil/components/snapshots/crucible_cli__tui__oil__components__diff_preview__tests__snapshot_diff_preview_typescript.snap
---
source: crates/crucible-cli/src/tui/oil/components/diff_preview.rs
expression: output
---
[38;2;158;206;106m[new file] [0m[38;5;14msrc/types.ts[0m
[38;2;158;206;106m+interface User {                                                               [0m
[38;2;158;206;106m+    id: number;                                                                [0m
[38;2;158;206;106m+    name: string;                                                              [0m
[38;2;158;206;106m+}                                                                              [0m
[38;2;158;206;106m+                                                                               [0m
[38;2;158;206;106m+const user: User = { id: 1, name: "Alice" };                                   [0m
