crates/crucible-cli/src/tui/oil/components/snapshots/crucible_cli__tui__oil__components__diff_preview__tests__snapshot_diff_preview_unknown_extension.snap
---
source: crates/crucible-cli/src/tui/oil/components/diff_preview.rs
expression: output
---
[38;2;158;206;106m[new file] [0m[38;5;14mdata.custom[0m
[38;2;158;206;106m+This is a custom format file                                                   [0m
[38;2;158;206;106m+With multiple lines                                                            [0m
[38;2;158;206;106m+No syntax highlighting                                                         [0m
